--- a/AppointmentSystem/src/main/resources/application.properties
+++ b/AppointmentSystem/src/main/resources/application.properties
@@ -7,9 +7,10 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-rabbitmq.queue=test.queue
-rabbitmq.exchange=test.exchange
-rabbitmq.routing-key=test.key
+rabbitmq.turno.queue=cola.turnos
+rabbitmq.turno.routing-key=turno.creado
+rabbitmq.servicio.queue=cola.servicios
+rabbitmq.servicio.routing-key=servicio.creado
 
 
 # Configuraci\u00f3n de MySQL
